--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" sizes="180x180" href="./logo.png" type="image/png">
     <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.behance.net%2Fgallery%2F126630449%2FTech-Logo-Technology-and-software-Logo-Design%2Fmodules%2F718663357&psig=AOvVaw0yywfyNasz95brV2td8JU_&ust=1746190190847000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJDbxcKngo0DFQAAAAAdAAAAABAE">
     <meta property="og:title" content="DudeShape">
+    <meta name="description" content="DudeShape internet shop">
 </head>
 <body>
     <div id="root"></div>
